--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   // Textos y elementos (en px del póster)
   const TITLE = {x:200, y:2150, w:2080, h:190};
   const ARTIST= {x:200, y:2330, w:2080, h:150};
-  const PB    = {x:300, y:2640, w:2060, h:20};          // barra un pelín más alta
+  const PB    = {x:300, y:2640, w:2060, h:26};          // barra más alta
   const TIME_L= {x:300, y:2680, w:160, h:40};
   const TIME_R= {x:2060, y:2680, w:300, h:40};
 
@@ -122,7 +122,7 @@
 
   const px2=(x,y,w,h)=>({wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW});
 
-  // ===== Fondo/Vignette + sombra elíptica =====
+  // ===== Vignette + sombra elíptica =====
   const vignette=document.createElement('a-plane');
   vignette.setAttribute('width', 1.16);
   vignette.setAttribute('height', H*1.16);
@@ -138,7 +138,7 @@
   shadow.setAttribute('material','shader:flat; color:#000; opacity:.18; transparent:true; side:double; depthTest:false');
   root.appendChild(shadow);
 
-  // ===== Canvas overlay (diseño, textos y FX 2D) =====
+  // ===== Canvas overlay (textos y FX 2D) =====
   const baseImg = document.getElementById('base');
   const Cw = 2048, Ch = Math.round(Cw*H);
   const canvas = document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
@@ -146,7 +146,7 @@
 
   const overlayP = document.createElement('a-plane');
   overlayP.setAttribute('width',1); overlayP.setAttribute('height',H);
-  overlayP.setAttribute('position','0 0 0.0');
+  overlayP.setAttribute('position','0 0 0.0');                    // detrás del vídeo
   overlayP.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:0');
   overlayP.setAttribute('animation__fade','property:material.opacity; from:0; to:1; dur:380; easing:easeOutQuad; startEvents:show');
   root.appendChild(overlayP);
@@ -159,13 +159,13 @@
     overlayP.__tex = tex;
   });
 
-  // ===== Vídeo limpio + micro Ken-Burns (sobre cover base) =====
+  // ===== Vídeo limpio por DELANTE del overlay (fix blanco) =====
   const v1=document.getElementById('v1');
   const u = px2(SLOT.x,SLOT.y,SLOT.w,SLOT.h);
   const vPlane=document.createElement('a-plane');
   vPlane.setAttribute('width',u.wn); vPlane.setAttribute('height',u.hn);
-  vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.03`);
-  vPlane.setAttribute('material','shader:flat; src:#v1; side:double; depthTest:false; opacity:1');
+  vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.12`);          // Z adelantado
+  vPlane.setAttribute('material','shader:flat; src:#v1; side:double; depthTest:true; transparent:false; opacity:1');
   root.appendChild(vPlane);
 
   function setCoverAndBase(){
@@ -179,13 +179,13 @@
   vPlane.addEventListener('materialtextureloaded', setCoverAndBase);
   v1.addEventListener('loadedmetadata', ()=>{ v1.play().catch(()=>{}); setCoverAndBase(); }, {once:true});
 
-  // ===== Audio + WebAudio analyser =====
+  // ===== Audio + analyser =====
   let audio=null, userOK=false, acx=null, analyser=null, dataArr=null;
   let lastBeat=0;
 
   function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
 
-  // ===== Partículas (corazones/estrellas) =====
+  // ===== Partículas =====
   function burstParticles(color='#13d77a', count=10){
     for(let i=0;i<count;i++){
       const p=document.createElement('a-circle');
@@ -203,9 +203,9 @@
     }
   }
 
-  // ===== Dibujo del overlay (textos, barra, waveform, sweep) =====
+  // ===== Dibujo del overlay (textos + barra + waveform) =====
   let t0=performance.now(), sweepT=0;
-  const bars=32;
+  const bars=48; // más denso
 
   function fitFontFor(text, wpx, hpx, weight){
     let lo=12, hi=Math.floor(hpx*0.92), best=Math.floor(hpx*0.75);
@@ -222,9 +222,9 @@
   function drawOverlay(){
     const now = performance.now(); const dt = (now - t0)/1000; t0 = now; sweepT += dt;
 
-    // base
+    // base (sin pantallazo blanco si no cargó)
     if(baseImg.complete) ctx.drawImage(baseImg, 0, 0, Cw, Ch);
-    else { ctx.fillStyle='#fff'; ctx.fillRect(0,0,Cw,Ch); }
+    else ctx.clearRect(0,0,Cw,Ch);
 
     // título con shimmer
     const tx = Math.round(TITLE.x*Cw/PW), ty=Math.round(TITLE.y*Ch/PH),
@@ -251,8 +251,6 @@
     // barra y tiempos
     const pbx=Math.round(PB.x*Cw/PW), pby=Math.round(PB.y*Ch/PH),
           pbw=Math.round(PB.w*Cw/PW), pbh=Math.max(2,Math.round(PB.h*Ch/PH));
-
-    // glow leve debajo
     ctx.fillStyle='rgba(0,0,0,0.15)'; ctx.fillRect(pbx, pby+2, pbw, pbh);
     ctx.fillStyle='#000'; ctx.fillRect(pbx, pby, pbw, pbh);
 
@@ -275,26 +273,61 @@
     ctx.textAlign='right';
     ctx.fillText(dur, Math.round((TIME_R.x+TIME_R.w)*Cw/PW), Math.round((TIME_R.y+TIME_R.h)*Ch/PH));
 
-    // waveform
-    const bx=pbx, by=pby - Math.round(22*Cw/2048), bw=pbw, bh=Math.round(18*Cw/2048);
-    ctx.save(); ctx.translate(bx,by+bh);
-    const step=bw/bars;
-    let level=0;
-    for(let i=0;i<bars;i++){
-      let v = 0.2 + 0.8*Math.abs(Math.sin((now/260)+(i*0.37)));
-      if(analyser){ analyser.getByteFrequencyData(dataArr); v = (dataArr[2+i]||0)/255; level += v; }
-      const h = Math.max(2, Math.round(v*bh));
-      const x = Math.round(i*step + step*0.2);
-      ctx.fillStyle='#13d77a';
-      ctx.fillRect(x, -h, Math.max(2,Math.round(step*0.6)), h);
+    // waveform (grande, espejo, gradiente y glow)
+    const bx=pbx, bw=pbw;
+    const bh=Math.round(28*Cw/2048);                     // más alto
+    const gap=Math.round(22*Cw/2048);
+    const byTop  = pby - gap - bh;                        // arriba de la barra
+    const byBottom = pby + pbh + gap;                     // debajo (espejo)
+    // datos del analyser una sola vez por frame
+    let level=0; let arr=null;
+    if(analyser){ arr = new Uint8Array(analyser.frequencyBinCount); analyser.getByteFrequencyData(arr); }
+
+    function barColor(v){
+      // verde -> amarillo -> coral según energía
+      const g = Math.min(1, Math.max(0, v));
+      if(g<0.5){ // 0..0.5  #13d77a -> #ffd54a
+        const t=g/0.5; const r=0x13 + (0xff-0x13)*t, gr=0xd7 + (0xd5-0xd7)*t, b=0x7a + (0x4a-0x7a)*t;
+        return `rgb(${r|0},${gr|0},${b|0})`;
+      }else{     // 0.5..1  #ffd54a -> #ff6d6d
+        const t=(g-0.5)/0.5; const r=0xff, gr=0xd5 + (0x6d-0xd5)*t, b=0x4a + (0x6d-0x4a)*t;
+        return `rgb(${r},${gr|0},${b|0})`;
+      }
     }
-    ctx.restore();
+
+    function paintWave(yBase, mirror=false){
+      ctx.save(); ctx.translate(bx, yBase + (mirror?0:bh)); // arriba dibuja desde yBase+bh hacia arriba
+      const step=bw/bars;
+      for(let i=0;i<bars;i++){
+        let v = 0.25 + 0.75*Math.abs(Math.sin((now/260)+(i*0.37))); // fallback
+        if(arr){ v = (arr[2+i]||0)/255; level += v; }
+        const h = Math.max(3, Math.round(v*bh));
+        const x = Math.round(i*step + step*0.18);
+        const w = Math.max(2,Math.round(step*0.64));
+        ctx.fillStyle=barColor(v);
+        if(mirror){ // abajo hacia abajo
+          ctx.fillRect(x, 0, w, h);
+          ctx.globalAlpha=0.25; ctx.fillRect(x, 0, w, 4); ctx.globalAlpha=1;
+        }else{      // arriba hacia arriba (negativo)
+          ctx.fillRect(x, -h, w, h);
+          ctx.globalAlpha=0.25; ctx.fillRect(x, -4, w, 4); ctx.globalAlpha=1;
+        }
+      }
+      ctx.restore();
+    }
+    // glow base
+    ctx.fillStyle='rgba(19,215,122,0.12)';
+    ctx.fillRect(bx, byTop-6, bw, 6);
+    ctx.fillRect(bx, byBottom, bw, 6);
+
+    paintWave(byTop, false);
+    paintWave(byBottom, true);
 
     // beat → partículas
-    if(analyser){
+    if(arr){
       level/=bars;
       const nowMs=performance.now();
-      if(level>0.48 && nowMs-lastBeat>200){ lastBeat=nowMs; burstParticles('#13d77a', 6); }
+      if(level>0.50 && nowMs-lastBeat>200){ lastBeat=nowMs; burstParticles('#ffd54a', 8); }
     }
 
     // light-sweep del marco
@@ -315,7 +348,7 @@
     }
     drawPartial(Lp); ctx.stroke(); ctx.restore();
 
-    // micro “glare” diagonal en la foto (muy sutil)
+    // micro glare diagonal en la foto
     const vx=Math.round(SLOT.x*Cw/PW), vy=Math.round(SLOT.y*Ch/PH),
           vw=Math.round(SLOT.w*Cw/PW), vh=Math.round(SLOT.h*Ch/PH);
     const g=ctx.createLinearGradient(vx,vy, vx+vw, vy+vh);
@@ -326,10 +359,10 @@
     ctx.fillStyle=g; ctx.fillRect(vx,vy,vw,vh);
 
     // actualizar textura
-    if(overlayP.__tex){ overlayP.__tex.needsUpdate = true; }
+    overlayP.__tex && (overlayP.__tex.needsUpdate = true);
   }
 
-  // Ken-Burns suave: desplaza ligeramente dentro del recorte
+  // Ken-Burns suave
   function kenBurns(){
     const B=vPlane.__base; if(!B) return;
     const dx = (Math.sin(performance.now()/6000)*0.015)*B.rx;
@@ -391,7 +424,7 @@
           dataArr = new Uint8Array(analyser.frequencyBinCount);
           const srcNode = acx.createMediaElementSource(audio);
           srcNode.connect(analyser); analyser.connect(acx.destination);
-        }catch(e){ /* fallback breathing */ }
+        }catch(e){ /* fallback */ }
       }
       userOK=true; await audio.play(); v1.play().catch(()=>{});
       if(acx && acx.state==='suspended') await acx.resume();
