--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-<title>Poster AR · Cinemático++</title>
+<title>Poster AR · Cinemático++ (fix)</title>
 <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara detrás */
   video[playsinline]{
     position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important
   }
-  /* WebGL delante */
   a-scene,canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:none!important}
-
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
-       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:9}
+       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:9;max-width:58ch}
   .cal{position:fixed;left:8px;bottom:8px;display:flex;gap:6px;flex-wrap:wrap;z-index:9}
   .chip{background:#0f1522;border:1px solid #2a3a58;color:#eaf2ff;border-radius:10px;padding:6px 8px}
 </style>
@@ -61,14 +58,13 @@
 <script>
 (function(){
   const dbg = document.getElementById('dbg');
-  const log = m => { dbg.textContent = m + ' · ' + new Date().toLocaleTimeString(); console.log('[AR]',m); };
+  const log = (m)=>{ dbg.textContent = m + ' · ' + new Date().toLocaleTimeString() + '\n' + dbg.textContent; console.log('[AR]',m); };
 
   const qs = new URLSearchParams(location.search);
 
-  // ===== Config =====
+  // ---------- Config ----------
   const TARGET_URL = qs.get('t') || 'https://res.cloudinary.com/dtge9nklw/raw/upload/v1759341741/targets_10_h3yoq9.mind';
   const AUDIO_URL  = qs.get('audio') || 'https://res.cloudinary.com/dtge9nklw/video/upload/v1759311992/ssvid.app--Ed-Sheeran-Shape-of-You-Lyrics_vyw046.mp3';
-
   const titleTxt  = decodeURIComponent(qs.get('title') || 'Shape of You');
   const artistTxt = decodeURIComponent(qs.get('artist')|| 'Ed Sheeran');
   const titleCol  = '#'+(qs.get('tc1')||'000000');
@@ -90,7 +86,7 @@
   };
   const PARALLAX = qs.get('parallax')==='1';
 
-  // ===== A-Frame / MindAR =====
+  // ---------- Scene ----------
   const scene=document.getElementById('scene');
   scene.setAttribute('mindar-image', `imageTargetSrc:${TARGET_URL}; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;`);
   scene.addEventListener('loaded', ()=>{ try{ scene.renderer.setClearColor(0x000000,0);}catch{} });
@@ -113,7 +109,7 @@
 
   const px2=(x,y,w,h)=>({wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW});
 
-  // ===== Vignette + sombra =====
+  // ---------- Fondo/Vignette ----------
   const vignette=document.createElement('a-plane');
   vignette.setAttribute('width', 1.16);
   vignette.setAttribute('height', H*1.16);
@@ -121,15 +117,7 @@
   vignette.setAttribute('material','shader:flat; color:#000; opacity:.22; transparent:true; side:double; depthTest:false');
   root.appendChild(vignette);
 
-  const shadow=document.createElement('a-plane');
-  shadow.setAttribute('width', 0.86);
-  shadow.setAttribute('height', H*0.05);
-  shadow.setAttribute('position', `0 ${-H*0.48} -0.029`);
-  shadow.setAttribute('rotation','-8 0 0');
-  shadow.setAttribute('material','shader:flat; color:#000; opacity:.18; transparent:true; side:double; depthTest:false');
-  root.appendChild(shadow);
-
-  // ===== Canvas overlay (progreso, waveform, efectos) =====
+  // ---------- Canvas overlay (base + barra + waveform) ----------
   const baseImg = document.getElementById('base');
   const Cw = 2048, Ch = Math.round(Cw*H);
   const canvas = document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
@@ -137,9 +125,9 @@
 
   const overlayP = document.createElement('a-plane');
   overlayP.setAttribute('width',1); overlayP.setAttribute('height',H);
-  overlayP.setAttribute('position','0 0 0.00');     // DETRÁS del vídeo/texto
-  overlayP.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:0');
-  overlayP.setAttribute('animation__fade','property:material.opacity; from:0; to:1; dur:380; easing:easeOutQuad; startEvents:show');
+  overlayP.setAttribute('position','0 0 0.00');
+  // ¡SIEMPRE visible! (si no hay imagen, pintamos fallback)
+  overlayP.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
   root.appendChild(overlayP);
 
   overlayP.addEventListener('loaded', ()=>{
@@ -150,7 +138,11 @@
     overlayP.__tex = tex;
   });
 
-  // ===== Vídeo POR DELANTE =====
+  let baseReady = false;
+  baseImg.onload = ()=>{ baseReady=true; log('Base IMG cargada'); };
+  baseImg.onerror= ()=>{ baseReady=false; log('⚠️ Error cargando base IMG'); };
+
+  // ---------- Vídeo por delante ----------
   const v1=document.getElementById('v1');
   const u = px2(SLOT.x,SLOT.y,SLOT.w,SLOT.h);
   const vPlane=document.createElement('a-plane');
@@ -168,33 +160,36 @@
     vPlane.__base = {ox,oy,rx,ry,tex};
   }
   vPlane.addEventListener('materialtextureloaded', setCover);
-  v1.addEventListener('loadedmetadata', ()=>{ v1.play().catch(()=>{}); setCover(); }, {once:true});
+  v1.addEventListener('loadedmetadata', ()=>{ ensureVideo(); setCover(); }, {once:true});
+  v1.addEventListener('canplay', ()=>{ ensureVideo(); });
 
-  // ===== Texto 3D (fiable) por ENCIMA =====
-  function text3D(value, slot, color, weight){
+  function ensureVideo(){
+    const tryPlay = () => v1.play().catch(()=>{});
+    tryPlay();
+    setTimeout(tryPlay, 200);
+    setTimeout(tryPlay, 800);
+  }
+
+  // ---------- Texto 3D arriba (siempre visible) ----------
+  function text3D(value, slot, color){
     const g=px2(slot.x,slot.y,slot.w,slot.h);
     const e=document.createElement('a-entity');
     e.setAttribute('position', `${g.cx} ${g.cy} 0.16`);
     e.setAttribute('text', `value:${value}; align:center; anchor:center; color:${color}; width:${g.wn}; wrapCount:40; baseline:center;`);
-    e.setAttribute('animation__fade','property:opacity; from:0; to:1; dur:320; easing:easeOutQuad; startEvents:show');
-    // pequeño pop
-    e.setAttribute('animation__pop','property:scale; from:0.96 0.96 1; to:1 1 1; dur:260; easing:easeOutQuad; startEvents:show');
+    e.setAttribute('animation__fade','property:opacity; from:0; to:1; dur:260; easing:easeOutQuad; startEvents:show');
+    e.setAttribute('animation__pop','property:scale; from:0.96 0.96 1; to:1 1 1; dur:220; easing:easeOutQuad; startEvents:show');
     root.appendChild(e);
-    // ajusta tamaño con un factor respecto a la altura del slot (msdf usa "width")
-    e.setAttribute('scale', `${Math.min(1.2, slot.w/slot.h/7)} ${Math.min(1.2, slot.w/slot.h/7)} 1`);
     return e;
   }
-  const title3d  = text3D(titleTxt,  TITLE,  titleCol, 800);
-  const artist3d = text3D(artistTxt, ARTIST, artistCol, 600);
+  const title3d  = text3D(decodeURIComponent(qs.get('title')||'Shape of You'),  TITLE,  titleCol);
+  const artist3d = text3D(decodeURIComponent(qs.get('artist')||'Ed Sheeran'), ARTIST, artistCol);
 
-  // ===== Audio + analyser =====
-  let audio=null, userOK=false, acx=null, analyser=null;
-  let lastBeat=0;
-
+  // ---------- Audio / analyser ----------
+  let audio=null, userOK=false, acx=null, analyser=null, lastBeat=0;
+  const bars=48;
   function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
 
-  // ===== Partículas =====
-  function burstParticles(color='#13d77a', count=10){
+  function burstParticles(color='#ffd54a', count=8){
     for(let i=0;i<count;i++){
       const p=document.createElement('a-circle');
       p.setAttribute('radius', 0.006 + Math.random()*0.01);
@@ -207,22 +202,27 @@
       p.setAttribute('animation__fade', `property:material.opacity; from:0.95; to:0; dur:${dur}; easing:linear`);
       p.setAttribute('animation__scale', `property:scale; from:0.8 0.8 1; to:1.4 1.4 1; dur:${dur}`);
       root.appendChild(p);
-      setTimeout(()=>p.remove(), dur+80);
+      setTimeout(()=>p.remove(), dur+100);
     }
   }
 
-  // ===== Dibujo canvas (base, barra, waveform) =====
-  let t0=performance.now(), sweepT=0;
-  const bars=48;
-
+  // ---------- Dibujo canvas (base + progreso + waveform) ----------
   function drawOverlay(){
-    const now = performance.now(); const dt = (now - t0)/1000; t0 = now; sweepT += dt;
+    // base: si no está lista, dibujamos fallback (marco y guías) para que NUNCA se vea “en blanco”
+    if(baseReady){
+      ctx.drawImage(baseImg, 0, 0, Cw, Ch);
+    }else{
+      ctx.clearRect(0,0,Cw,Ch);
+      ctx.fillStyle='#ffffff'; ctx.fillRect(0,0,Cw,Ch);
+      ctx.strokeStyle='#222'; ctx.lineWidth=Math.round(Cw*0.008);
+      ctx.strokeRect(Math.round(Cw*0.06), Math.round(Ch*0.06), Math.round(Cw*0.88), Math.round(Ch*0.88));
+      // guía del vídeo:
+      const vx=Math.round(SLOT.x*Cw/PW), vy=Math.round(SLOT.y*Ch/PH),
+            vw=Math.round(SLOT.w*Cw/PW), vh=Math.round(SLOT.h*Ch/PH);
+      ctx.strokeStyle='#888'; ctx.lineWidth=2; ctx.strokeRect(vx,vy,vw,vh);
+    }
 
-    // base (si no cargó: limpiar, no blanco opaco)
-    if(baseImg.complete) ctx.drawImage(baseImg, 0, 0, Cw, Ch);
-    else ctx.clearRect(0,0,Cw,Ch);
-
-    // barra + tiempos
+    // progreso + tiempos
     const pbx=Math.round(PB.x*Cw/PW), pby=Math.round(PB.y*Ch/PH),
           pbw=Math.round(PB.w*Cw/PW), pbh=Math.max(2,Math.round(PB.h*Ch/PH));
     ctx.fillStyle='rgba(0,0,0,0.15)'; ctx.fillRect(pbx, pby+2, pbw, pbh);
@@ -232,24 +232,25 @@
     if(audio && audio.duration>0){ p = audio.currentTime/audio.duration; cur=mmss(audio.currentTime); dur=mmss(audio.duration); }
     const fw = Math.max(2, Math.floor(pbw*p));
     ctx.fillStyle='#13d77a'; ctx.fillRect(pbx, pby, fw, pbh);
-
-    // knob
     const kx = pbx + fw; const ky = pby + pbh/2;
     const baseR = Math.max(3, Math.round(pbh*0.9/2));
-    const pulse = 1 + 0.10*Math.sin(now/220);
+    const pulse = 1 + 0.10*Math.sin(performance.now()/220);
     ctx.beginPath(); ctx.arc(kx,ky,baseR*pulse,0,Math.PI*2); ctx.fillStyle='#000'; ctx.fill();
 
-    // tiempos
     ctx.fillStyle='#000'; ctx.textBaseline='alphabetic'; ctx.textAlign='left';
     ctx.font = `700 ${Math.round(28*Cw/2048)}px system-ui,Segoe UI,Roboto`;
     ctx.fillText(cur, Math.round(TIME_L.x*Cw/PW), Math.round((TIME_L.y+TIME_L.h)*Ch/PH));
     ctx.textAlign='right';
     ctx.fillText(dur, Math.round((TIME_R.x+TIME_R.w)*Cw/PW), Math.round((TIME_R.y+TIME_R.h)*Ch/PH));
 
-    // waveform grande (arriba y abajo)
+    // waveform
     const bw=pbw, bh=Math.round(28*Cw/2048), gap=Math.round(22*Cw/2048);
     const byTop  = pby - gap - bh;
     const byBottom = pby + pbh + gap;
+
+    const arr = (analyser? (new Uint8Array(analyser.frequencyBinCount)) : null);
+    if(arr) analyser.getByteFrequencyData(arr);
+    let level=0;
 
     function barColor(v){
       const g = Math.min(1, Math.max(0, v));
@@ -260,15 +261,11 @@
       }
     }
 
-    const arr = (analyser? (new Uint8Array(analyser.frequencyBinCount)) : null);
-    if(arr) analyser.getByteFrequencyData(arr);
-    let level=0;
-
     function paintWave(yBase, mirror=false){
       ctx.save(); ctx.translate(pbx, yBase + (mirror?0:bh));
       const step=bw/bars;
       for(let i=0;i<bars;i++){
-        let v = 0.25 + 0.75*Math.abs(Math.sin((now/260)+(i*0.37)));
+        let v = 0.25 + 0.75*Math.abs(Math.sin((performance.now()/260)+(i*0.37)));
         if(arr){ v = (arr[2+i]||0)/255; level+=v; }
         const h = Math.max(3, Math.round(v*bh));
         const x = Math.round(i*step + step*0.18);
@@ -278,20 +275,17 @@
       }
       ctx.restore();
     }
-
     ctx.fillStyle='rgba(19,215,122,0.12)';
     ctx.fillRect(pbx, byTop-6, bw, 6);
     ctx.fillRect(pbx, byBottom, bw, 6);
     paintWave(byTop, false);
     paintWave(byBottom, true);
 
-    // partículas en beat
     if(arr){
-      level/=bars; const nowMs=performance.now();
-      if(level>0.50 && nowMs-lastBeat>200){ lastBeat=nowMs; burstParticles('#ffd54a', 8); }
+      level/=bars; const now=performance.now();
+      if(level>0.50 && now-lastBeat>200){ lastBeat=now; burstParticles('#ffd54a', 8); }
     }
 
-    // actualizar textura
     overlayP.__tex && (overlayP.__tex.needsUpdate = true);
   }
 
@@ -307,7 +301,7 @@
   function loop(){ drawOverlay(); kenBurns(); requestAnimationFrame(loop); }
   requestAnimationFrame(loop);
 
-  // ===== Parallax =====
+  // ---------- Parallax ----------
   function parallaxTick(){
     if(!PARALLAX || !scene?.camera) return requestAnimationFrame(parallaxTick);
     const obj=root.object3D, cam3=scene.camera;
@@ -320,13 +314,12 @@
   }
   requestAnimationFrame(parallaxTick);
 
-  // ===== Estados AR =====
+  // ---------- Estados AR ----------
   anchor.addEventListener('targetFound', ()=>{
-    overlayP.emit('show',null,false);
+    root.emit('pop',null,false);
+    ensureVideo();
     title3d.emit('show',null,false);
     artist3d.emit('show',null,false);
-    root.emit('pop',null,false);
-    v1.play().catch(()=>{});
     if(userOK){ audio?.play().catch(()=>{}); document.getElementById('btnSound').hidden=true; }
     else document.getElementById('btnSound').hidden=false;
     log('Target FOUND');
@@ -337,7 +330,7 @@
     log('Target LOST…');
   });
 
-  // ===== Interacciones / UI =====
+  // ---------- UI ----------
   const btnStart=document.getElementById('btnStart');
   btnStart.onclick=async()=>{
     try{
@@ -359,25 +352,24 @@
           src.connect(analyser); analyser.connect(acx.destination);
         }catch(e){}
       }
-      userOK=true; await audio.play(); v1.play().catch(()=>{});
+      userOK=true; await audio.play(); ensureVideo();
       if(acx && acx.state==='suspended') await acx.resume();
       btnSound.hidden=true; burstParticles('#ffd54a', 10);
     }catch(e){}
   };
 
-  // Tap: play/pause + vibración + partículas
   root.addEventListener('click', ()=>{
     const any = audio && !audio.paused;
     if(any){ audio.pause(); v1.pause(); burstParticles('#ff6d6d', 8); }
-    else { audio?.play().catch(()=>{}); v1.play().catch(()=>{}); burstParticles('#13d77a', 8); }
+    else { audio?.play().catch(()=>{}); ensureVideo(); burstParticles('#13d77a', 8); }
     if(navigator.vibrate) navigator.vibrate(20);
   });
 
-  // Reintentos de reproducción en el primer gesto (móviles estrictos)
-  window.addEventListener('touchend', ()=>{ v1.play().catch(()=>{}); audio?.play?.().catch(()=>{}); }, {once:true,passive:true});
+  // reintentos por gesto
+  window.addEventListener('touchend', ()=>{ ensureVideo(); audio?.play?.().catch(()=>{}); }, {once:true,passive:true});
   window.addEventListener('pointerup', ()=>btnStart.click(), {once:true,passive:true});
 
-  // Calibración
+  // calibración
   if(qs.get('cal')==='0') document.getElementById('cal').style.display='none';
   document.querySelectorAll('#cal [data-a]').forEach(b=>{
     b.onclick=()=>{
